cmake_minimum_required(VERSION 3.26)
project(Assignments)

set(CMAKE_CXX_STANDARD 20)

add_executable(
        Assignments
#        testtenta.cpp
#        Assignment1/inlämning1a.cpp
#        Assignment1/inlämning1b.cpp
#        Assignment1/inlämning1c.cpp
#        Assignment1/inlämning1d.cpp
        Assignment1/inlämning1vg.cpp
)
