cmake_minimum_required(VERSION 3.26)
project(Assignments)

set(CMAKE_CXX_STANDARD 20)

add_executable(
        Assignments
#        Assignment1/inlämning1a.cpp
#        Assignment1/inlämning1b.cpp
#        Assignment1/inlämning1c.cpp
#        Assignment1/inlämning1d.cpp
#        Assignment1/inlämning1vg.cpp

#        Assignment2/inlämning2.cpp
#        testtenta1.cpp
        tentaA.cpp
#        tentaB.cpp
        #        testtenta2.cpp
#        lambda_example.cpp
        #        Assignment2/inlämning2vg.cpp
)
